[tool.poetry]
name = "cryptography"
version = "0.1.0"
description = ""
authors = ["Bionca Bond <bioncab@zillowgroup.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.1.0"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
